--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,12 @@ on:
   pull_request:
     branches:
       - '*'
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: 'Ref (branch / tag or hash) to build'
+        required: true 
+        type: string
 
 jobs:
   build:
@@ -18,6 +24,13 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v3
+      with:
+        ref: ${{ inputs.ref }}
 
     - name: Build APK
       run: make tailscale-debug.apk
+
+    - name: Archive Debug Build
+      uses: actions/upload-artifact@v3
+      with:
+        path: ./**/*.apk
